--- a/.env_sample
+++ b/.env_sample
@@ -17,7 +17,7 @@ export RACK_TIMEOUT_WAIT_TIMEOUT=100_000
 export RACK_TIMEOUT_SERVICE_TIMEOUT=100_000
 
 # Heroku release slug used to bust caches on deploys
-export HEROKU_SLUG_COMMIT="Optional"
+export HEROKU_SLUG_COMMIT=""
 
 # Redis caching storage
 export REDIS_URL="redis://localhost:6379"
@@ -37,7 +37,10 @@ export ELASTICSEARCH_URL="http://localhost:9200"
 export OPENRESTY_URL=""
 
 # SSL config
-export FORCE_SSL_IN_RAILS="not applicable in dev"
+export FORCE_SSL_IN_RAILS="false"
+
+# SendGrid API Key
+export SENDGRID_API_KEY=""
 
 ################################################
 ######### Optional 3rd Party Services ##########
@@ -45,19 +48,19 @@ export FORCE_SSL_IN_RAILS="not applicable in dev"
 
 # Honeybadger for error tracking
 # (https://docs.honeybadger.io/lib/ruby/getting-started/introduction.html)
-export HONEYBADGER_API_KEY="Optional"
-export HONEYBADGER_JS_API_KEY="Optional"
+export HONEYBADGER_API_KEY=""
+export HONEYBADGER_JS_API_KEY=""
 
 # AWS for images storages
-export AWS_ID="Optional"
-export AWS_SECRET="Optional"
-export AWS_BUCKET_NAME="Optional"
+export AWS_ID=""
+export AWS_SECRET=""
+export AWS_BUCKET_NAME=""
 export AWS_UPLOAD_REGION=""
 
 # AWS for video storage
-export AWS_S3_INPUT_BUCKET="Optional"
-export AWS_S3_VIDEO_ID="Optional"
-export AWS_S3_VIDEO_KEY="Optional"
+export AWS_S3_INPUT_BUCKET=""
+export AWS_S3_VIDEO_ID=""
+export AWS_S3_VIDEO_KEY=""
 
 # Buffer for sending to buffer
 # This is legacy, as Buffer no longer supports this functionality for NEW accounts.
@@ -72,15 +75,15 @@ export BUFFER_LISTINGS_PROFILE="Optional"
 
 # Cloudinary for image resizing and cache??
 # (https://cloudinary.com/documentation/rails_integration)
-export CLOUDINARY_API_KEY="Optional"
-export CLOUDINARY_API_SECRET="Optional"
-export CLOUDINARY_CLOUD_NAME="Optional"
-export CLOUDINARY_SECURE="Optional"
+export CLOUDINARY_API_KEY=""
+export CLOUDINARY_API_SECRET=""
+export CLOUDINARY_CLOUD_NAME=""
+export CLOUDINARY_SECURE=""
 
 # HTML/CSS to Image for generating social preview images
 # (https://docs.htmlcsstoimage.com/example-code/ruby)
-export HCTI_API_USER_ID="Optional"
-export HCTI_API_KEY="Optional"
+export HCTI_API_USER_ID=""
+export HCTI_API_KEY=""
 
 # Fastly for edge caching
 # (https://docs.fastly.com/api/)
@@ -93,11 +96,11 @@ export HONEYCOMB_API_KEY=""
 
 # Google analytics
 # (https://developers.google.com/analytics/devguides/reporting/core/v4)
-export GA_TRACKING_ID="Optional"
+export GA_TRACKING_ID=""
 
 # Mailchimp for mails
 # (https://mailchimp.com/developer/)
-export MAILCHIMP_API_KEY="Optional-valid"
+export MAILCHIMP_API_KEY=""
 
 # Pusher for DEV Connect/notfications
 # (https://pusher.com/docs)
@@ -121,15 +124,15 @@ export SLACK_WEBHOOK_URL=""
 
 # For video calling in DEV Connect
 # (https://www.twilio.com/docs/video)
-export TWILIO_ACCOUNT_SID="Optional"
-export TWILIO_VIDEO_API_KEY="Optional"
-export TWILIO_VIDEO_API_SECRET="Optional"
+export TWILIO_ACCOUNT_SID=""
+export TWILIO_VIDEO_API_KEY=""
+export TWILIO_VIDEO_API_SECRET=""
 
 # For Twitch live stream integration
 # (https://dev.twitch.tv/docs)
-export TWITCH_CLIENT_ID="Optional"
-export TWITCH_CLIENT_SECRET="Optional"
-export TWITCH_WEBHOOK_SECRET="Optional"
+export TWITCH_CLIENT_ID=""
+export TWITCH_CLIENT_SECRET=""
+export TWITCH_WEBHOOK_SECRET=""
 
 # For calling the Stack Exchange API
 # (https://api.stackexchange.com/docs)
@@ -137,5 +140,5 @@ export STACK_EXCHANGE_APP_KEY=""
 
 # For calling the Github API
 # (https://docs.github.com/)
-export GITHUB_KEY="Optional"
-export GITHUB_SECRET="Optional"
+export GITHUB_KEY=""
+export GITHUB_SECRET=""
